Fix layout issue in header

--- a/atlas-admin-frontend/scss/modules/_buttons.scss
+++ b/atlas-admin-frontend/scss/modules/_buttons.scss
@@ -172,55 +172,3 @@ a.button:hover { color: $color-purple; }
         }
     }
 }
-
-
-// Legacy button styles - to be cleaned up
-.btn {
-    border-radius: 3px;
-    color: #fff;
-    font-size: 16px;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-    border: 1px solid #d371a2;
-    padding: 3px 10px;
-    display: inline-block;
-    vertical-align: center;
-    background-color: #eb80b5;
-    background: linear-gradient(top, #eb80b5, #ef308f);
-    box-shadow: 0 1px 5px rgba(0,0,0,0.3);
-    line-height: 24px;
-    text-decoration: none;
-}
-
-.btn:hover, .btn:focus, .cbtn:hover, .cbtn:focus {
-    text-decoration: none;
-    border: 1px solid #333;
-    outline: none;
-    color: #fff;
-}
-
-.btn:active {
-    box-shadow: inset 0 1px 5px rgba(0,0,0,0.4);
-    border: 1px solid #d371a2;
-}
-
-.btn_lrg {
-    margin-top: 5px;
-    border-radius: 5px;
-    font-size: 18px;
-    padding: 5px 15px 8px;
-    border: 1px solid #684090;
-    background-color: #8e5dbf;
-    background: linear-gradient(top, #8e5dbf, #3e126a);
-    box-shadow: inset 0 1px 1px rgba(255,255,255,0.4), 0 1px 5px rgba(0,0,0,0.3);
-    line-height: 26px;
-}
-
-.btn_lrg:active {border: 1px solid #684090;}
-
-.navbar-api-explorer-btn {
-    float: left;
-    margin: 1rem 1rem 0 0;
-    border: 1px solid #684090;
-    background-color: #8e5dbf;
-    background: linear-gradient(top, #8e5dbf, #3e126a);
-}
