--- a/atlas-admin-frontend/scss/modules/_layout.scss
+++ b/atlas-admin-frontend/scss/modules/_layout.scss
@@ -18,7 +18,7 @@ html, body { height: 100%; }
 
 .app-surface {
     @extend %cf;
-    margin-top: 3.375rem;
+    margin-top: 5.5rem;
     width: 100%;
 }
 
