--- a/atlas-admin-frontend/scss/modules/_navbar.scss
+++ b/atlas-admin-frontend/scss/modules/_navbar.scss
@@ -84,11 +84,31 @@
 }
 
 .navbar-api-explorer-btn {
-    float: left;
-    margin: 0.8rem 1rem 0 0;
+    position: relative;
+    float: right;
+    margin: 0.8rem 0 0;
     border: 1px solid #684090;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 5px 15px 8px;
     background-color: #8e5dbf;
     background: linear-gradient(top, #8e5dbf, #3e126a);
+    box-shadow: inset 0 1px 1px rgba(255,255,255,0.4), 0 1px 5px rgba(0,0,0,0.3);
+    line-height: 26px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.navbar-api-explorer-btn:active {
+    box-shadow: inset 0 1px 5px rgba(0,0,0,0.4);
+    border: 1px solid #684090;
+}
+
+.navbar-api-explorer-btn:hover, .navbar-api-explorer-btn:focus {
+    text-decoration: none;
+    border: 1px solid #333;
+    outline: none;
+    color: #fff;
 }
 
 /* User profile nav */
@@ -99,9 +119,9 @@
 
 .profile-picture {
     float: right;
-    width: 2rem;
-    height: 2rem;
-    margin: 1.25rem 0 0 0.5rem;
+    width: 1.75rem;
+    height: 1.75rem;
+    margin: 0.5rem 0 0 0.5rem;
     border-radius: 50%;
 }
 
@@ -112,7 +132,7 @@
 
 .user-name {
     float: left;
-    margin: 2rem 0 0;
+    margin: 0.75rem 0 0;
     -webkit-transition: all .1s ease;
     transition: all .1s ease;
 }
@@ -167,7 +187,7 @@
 
 .navbar-user.has-dropdown-menu > a:after,
 .navbar-user.has-dropdown-menu > span:after {
-    top: 85%;
+    top: 1.5rem;
 }
 
 .dropdown-menu {
@@ -220,8 +240,14 @@
 }
 
 .user-dropdown-menu {
-    top: 100%;
-    margin-top: 6px;
+    top: 1.5rem;
+    left: auto;
+    right: 0;
+}
+
+.user-dropdown-menu:after {
+    left: auto;
+    right: 1.75rem;
 }
 
 .logged-in {
@@ -243,4 +269,12 @@
 
 .menu-title h4 {
     margin: 0;
+}
+
+.icn_mag {
+    width: 16px; height: 16px;
+    display: block;
+    float: left;
+    background: url(../img/apiMag.png) center no-repeat;
+    margin: 6px 10px 0 0;
 }
